test_suite/tests/ui/malformed/rename.stderr
error: malformed rename attribute, expected `rename(serialize = ..., deserialize = ...)`
 --> $DIR/tests/ui/malformed/rename.rs:5:20
  |
5 |     #[serde(rename(unknown))]
  |                    ^^^^^^^
